<resources>
    <string name="app_name">Sign Up Project</string>

    <string name="sign_up_header">Profile Creation</string>
    <string name="sign_up_help_text">Use the form below to submit your portfolio. \nAn email and password are required.</string>

    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="website">Website</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>

    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password must be at least 6 characters</string>


    <string name="confirmation_header">Hello, %s!</string>
    <string name="there">There</string>
    <string name="confirmation_help_text">Your super-awesome portfolio has been successfully submitted! The details below will be public within your community!</string>

    <string name="url_lunch_error">Error: could not launch url!</string>
    <string name="sign_in">Sign In</string>

</resources>